--- a/package.json
+++ b/package.json
@@ -13,12 +13,14 @@
   "devDependencies": {
     "@crxjs/vite-plugin": "^2.0.0-beta.19",
     "@types/chrome": "^0.0.246",
+    "@types/luxon": "^3.3.2",
     "solid-devtools": "^0.27.3",
     "typescript": "^5.1.3",
     "vite": "^4.3.9",
     "vite-plugin-solid": "^2.7.0"
   },
   "dependencies": {
+    "luxon": "^3.4.3",
     "solid-js": "^1.7.6"
   }
 }
