--- a/package.json
+++ b/package.json
@@ -14,8 +14,10 @@
     "@crxjs/vite-plugin": "^2.0.0-beta.19",
     "@types/chrome": "^0.0.246",
     "@types/luxon": "^3.3.2",
+    "sharp": "^0.32.6",
     "typescript": "^5.1.3",
     "vite": "^4.3.9",
+    "vite-plugin-image-optimizer": "^1.1.7",
     "vite-plugin-solid": "^2.7.0"
   },
   "dependencies": {
