--- a/.github/workflows/vitest.yml
+++ b/.github/workflows/vitest.yml
@@ -1,11 +1,11 @@
-name: vitest
+name: Vitest
 
 on:
   push:
   pull_request:
 
 jobs:
-  test:
+  Test:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
