--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "start": "vite",
     "dev": "vite",
     "build": "vite build",
-    "serve": "vite preview"
+    "serve": "vite preview",
+    "test": "vitest"
   },
   "license": "MIT",
   "devDependencies": {
@@ -18,7 +19,8 @@
     "typescript": "^5.1.3",
     "vite": "^4.3.9",
     "vite-plugin-image-optimizer": "^1.1.7",
-    "vite-plugin-solid": "^2.7.0"
+    "vite-plugin-solid": "^2.7.0",
+    "vitest": "^0.34.6"
   },
   "dependencies": {
     "luxon": "^3.4.3",
