fix: revert codeql changes

--- a/.github/workflows/codeql.yml
+++ b/.github/workflows/codeql.yml
@@ -10,4 +10,5 @@ on:
 
 jobs:
   run-code-analysis:
+    name: CodeQL Analysis
     uses: actions/reusable-workflows/.github/workflows/codeql-analysis.yml@main
